# Moments

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  _typos.toml  codecov.yml  deny.toml  io.github.justinf555.Moments.dev.json  io.github.justinf555.Moments.flathub.json  io.github.justinf555.Moments.json  meson.build  meson_options.txt
.config/: nextest.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  metrics.yml  release.yml  security.yml
build-aux/: io.github.justinf555.Moments.ci.json
data/: io.github.justinf555.Moments.desktop.in  io.github.justinf555.Moments.gschema.xml  io.github.justinf555.Moments.gschema.xml.in  io.github.justinf555.Moments.metainfo.xml.in  io.github.justinf555.Moments.service.in  meson.build
data/icons/: meson.build
docs/: design-activity-indicator.md  design-album-enhancements.md  design-event-bus.md  design-face-integration.md  design-gobject-blueprint-refactor.md  design-immich-backend.md  design-integration-testing.md  design-lazy-view-loading.md  design-photo-editing.md  design-photo-picker-portal.md  design-sidebar-status-bar.md  design-video-import.md  plan-event-bus-migration.md
docs/reviews/: 2026-03-arch-review.md
po/: POTFILES.in  meson.build
scripts/: complexity-report.py
src/: app_event.rs  application.rs  config.rs.in  event_bus.rs  event_emitter.rs  lib.rs  library.rs  main.rs  meson.build  moments.gresource.xml  shortcuts-dialog.blp  style.css  ui.rs  user_facing_error.rs  window.rs  window.ui
src/app_event/: mod.rs
src/application/: keyring.rs  mod.rs
src/client/: album_client.rs  import_client.rs  mod.rs
src/client/album/: client.rs  client_v2.rs  mod.rs  model.rs  picker_data.rs
src/client/import/: client.rs  event.rs  mod.rs
src/client/media/: client.rs  client_v2.rs  mod.rs  model.rs
src/client/people/: client.rs  client_v2.rs  mod.rs  model.rs
src/client/sync/: client.rs  mod.rs
src/commands/: add_to_album.rs  create_album.rs  delete.rs  delete_album.rs  dispatcher.rs  empty_trash.rs  favorite.rs  mod.rs  remove_from_album.rs  restore.rs  restore_all_trash.rs  test_helpers.rs  trash.rs
src/importer/: builder.rs  discovery.rs  error.rs  filter.rs  hasher.rs  metadata.rs  mod.rs  persistence.rs  pipeline.rs  thumbnail.rs  types.rs
src/renderer/: decode.rs  edits.rs  error.rs  mod.rs  orientation.rs  output.rs  pipeline.rs  resize.rs
src/renderer/format/: mod.rs  raw.rs  registry.rs  standard.rs  video.rs
src/sync/: client.rs  downloader.rs  event.rs  mod.rs  outbox.rs  pull.rs  push.rs  resolver.rs  types.rs
src/sync/outbox/: mod.rs  repository.rs
src/sync/providers/: mod.rs
src/sync/providers/immich/: client.rs  downloader.rs  mod.rs  pull.rs  push.rs  resolver.rs  types.rs
src/sync/providers/immich/handlers/: album.rs  album_asset.rs  asset.rs  asset_exif.rs  asset_face.rs  mod.rs  person.rs  sync_lifecycle.rs
src/tasks/: mod.rs  purge_trash.rs
src/ui/: album_dialogs.rs  album_grid.rs  album_picker.rs  album_picker_dialog.rs  collection_grid.blp  collection_grid.rs  coordinator.rs  empty_library.rs  import_dialog.blp  import_dialog.rs  import_dialog.ui  mod.rs  model_registry.rs  people_grid.rs  photo_grid.blp  photo_grid.rs  preferences_dialog.rs  setup_window.blp  setup_window.rs  setup_window.ui  sidebar.rs  video_viewer.blp  video_viewer.rs  viewer.blp  viewer.rs  widgets.rs  window.blp  window.rs  window.ui
src/ui/album_grid/: actions.rs  album_grid.blp  card.rs  factory.rs  item.rs  mod.rs  selection.rs
src/ui/album_grid/card/: card.blp  mod.rs
src/ui/album_picker_dialog/: album_row.rs  dialog.rs  mod.rs  state.rs
src/ui/collection_grid/: actions.rs  cell.blp  cell.rs  factory.rs  item.rs
src/ui/empty_library/: mod.rs
src/ui/import_dialog/: mod.rs
src/ui/people_grid/: actions.rs  cell.blp  cell.rs  factory.rs  item.rs  mod.rs  people_grid.blp
src/ui/photo_grid/: action_bar.rs  actions.rs  cell.blp  cell.rs  factory.rs  item.rs  mod.rs  model.rs  texture_cache.rs
src/ui/preferences_dialog/: mod.rs
src/ui/setup_window/: backend_picker_page.blp  backend_picker_page.rs  backend_picker_page.ui  immich_setup_page.blp  immich_setup_page.rs  local_setup_page.blp  local_setup_page.rs  local_setup_page.ui  mod.rs
src/ui/sidebar/: mod.rs  route.rs  row.rs  sidebar.blp  status_bar.rs
src/ui/video_viewer/: mod.rs
src/ui/viewer/: edit_panel.blp  edit_panel.rs  info_panel.rs  loading.rs  menu.rs  mod.rs
src/ui/viewer/edit_panel/: adjust_section.blp  adjust_section.rs  edit_panel.blp  filter_section.blp  filter_section.rs  filter_swatch.blp  filter_swatch.rs  filters.rs  mod.rs  sliders.rs  transform_section.blp  transform_section.rs  transforms.rs
src/ui/viewer/edit_panel/adjustments/: brightness.rs  contrast.rs  highlights.rs  mod.rs  saturation.rs  shadows.rs  temperature.rs  tint.rs  vibrance.rs  white_balance.rs
src/ui/viewer/edit_panel/filters/: black_and_white.rs  chrome.rs  cool.rs  fade.rs  golden.rs  matte.rs  mod.rs  noir.rs  none.rs  vintage.rs  vivid.rs  warm.rs
src/ui/viewer/edit_panel/transforms/: flip_horizontal.rs  flip_vertical.rs  mod.rs  rotate_ccw.rs  rotate_cw.rs
src/ui/viewer/info_panel/: camera_section.blp  camera_section.rs  date_section.blp  date_section.rs  file_section.blp  file_section.rs  image_section.blp  image_section.rs  info_panel.blp  location_section.blp  location_section.rs  mod.rs
src/ui/widgets/: context_menu_bin.rs  mod.rs
src/ui/widgets/activity_indicator/: activity_indicator.blp  mod.rs
src/ui/window/: mod.rs  window.blp
tests/: baseline_event_wiring.rs  event_bus.rs  headless_poc.rs
tests/common/: mock_library.rs  mod.rs  resources.rs
