[package]
name = "moments"
version = "0.1.0"
edition = "2021"

[dependencies]

# GTK/GNOME — keep these version-aligned
gtk = { version = "0.11", features = ["gnome_48"], package = "gtk4" }
adw = { version = "0.9", features = ["v1_8"], package = "libadwaita" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
blake3 = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Image processing — `image` kept for WebP thumbnail encoding only.
# Decoding is handled by glycin (sandboxed, handles all formats including HEIC and RAW).
image = { version = "0.25", default-features = false, features = ["webp"] }
kamadak-exif = "0.5"

# Sandboxed image loading — replaces image/rawler/libheif decode stack.
# tokio: run on the Tokio executor; gdk4: Frame::texture() returns gdk::Texture.
# default-features = false: skip the async-io executor (we use tokio instead).
glycin = { version = "3", default-features = false, features = ["tokio", "gdk4"] }

# Utilities
thiserror = "2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

# Optimise image-processing crates in debug builds.
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.gstreamer]
opt-level = 3
[profile.dev.package.gstreamer-app]
opt-level = 3
[profile.dev.package.gstreamer-video]
opt-level = 3
