[package]
name = "moments"
version = "0.1.3"
edition = "2021"
description = "A GNOME photo management app with local and Immich server support"
license = "GPL-3.0-or-later"
repository = "https://github.com/justinf555/Moments"
authors = ["justinf555"]
keywords = ["photos", "gnome", "gtk4", "image-management"]
categories = ["multimedia::images"]

[features]
editing = []

[dependencies]

# GTK/GNOME — keep these version-aligned
gtk = { version = "0.11", features = ["gnome_48"], package = "gtk4" }
adw = { version = "0.9", features = ["v1_8"], package = "libadwaita" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
blake3 = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }
kamadak-exif = "0.5"
# `image` feature enables the image-crate integration (register_all_decoding_hooks)
# `default-features = false` avoids the `embedded-libheif` feature (we use system libheif)
libheif-rs = { version = "2.7.0", default-features = false, features = ["image", "v1_20"] }

# Video — poster-frame extraction for thumbnails
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"

# HTTP client (Immich backend)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
serde_json = "1"

# Credential storage (GNOME Keyring)
libsecret = "0.9"

# Utilities
sha1 = "0.10"
thiserror = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rawler = "0.7.2"

[dev-dependencies]
tempfile = "3"

# Optimise image-processing crates in debug builds.
# Without this, JPEG decode of a large image can take several seconds in
# unoptimised code. Release builds are always optimised; this only affects
# local development / GNOME Builder runs.
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.image-webp]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.rawler]
opt-level = 3
[profile.dev.package.libheif-rs]
opt-level = 3